# elo-fifa-wc2026

./: .env.example  .gitignore  README.md  backtest.py  bracket_sim.py  compare.py  config.py  elo.py  evaluation.py  goals_model.py  goals_model_v2.py  pyproject.toml  ratings_engine.py  requirements.txt  simulation MECP.xlsx  test_bracket_sim.py  test_engine.py  test_eval.py  test_goals.py  test_goals_v2.py  test_ratings.py
.streamlit/: config.toml
app/: glue.py  streamlit_app.py
db/: connection.py  migrate.py  schema.sql
docs/: CALIBRATION.md  GOAL_V2.md  VALIDATION_RATINGS.md
ingestion/: live_results.py  load_history.py  load_ratings.py  source_fixtures.py  source_groups.py  source_results.py  teams_ref.py  validate_ratings.py  xg_source.py
